--- a/fichier.html
+++ b/fichier.html
@@ -9,8 +9,9 @@
     <body>
         <h1>Recette de cookies</h1>
         <h2>Recette pour 6 personnes!</h2>
-        <img src="istockphoto-155245101-1024x1024.jpg" alt="cookies" height="200" width="400">
+        <img src="Modifs.jpg" alt="cookies" height="200" width="400">
         <h3>Ingredients:</h3>
+    
     <ul>
         <li>1 oeuf</li>
         <li>85g de sucre</li>
